--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
         <activity
-            android:name="com.vn.chat_app_client.ui.auth.AuthActivity"
+            android:name="com.vn.chat_app_client.presentation.auth.AuthActivity"
             android:enabled="true"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="ExtraText,LockedOrientationActivity" />
         <activity
-            android:name="com.vn.chat_app_client.ui.splash.SplashActivity"
+            android:name="com.vn.chat_app_client.presentation.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="ExtraText,LockedOrientationActivity">
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.vn.chat_app_client.ui.MainActivity"
+            android:name="com.vn.chat_app_client.presentation.MainActivity"
             android:enabled="true"
             android:exported="false"
             android:screenOrientation="portrait"
