--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,21 +29,24 @@
             tools:ignore="ExtraText,LockedOrientationActivity" />
         <activity
             android:name="com.vn.chat_app_client.presentation.splash.SplashActivity"
-            android:exported="true"
+            android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="ExtraText,LockedOrientationActivity">
+
+        </activity>
+        <activity
+            android:name="com.vn.chat_app_client.presentation.MainActivity"
+            android:enabled="true"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            tools:ignore="ExtraText,LockedOrientationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity
-            android:name="com.vn.chat_app_client.presentation.MainActivity"
-            android:enabled="true"
-            android:exported="false"
-            android:screenOrientation="portrait"
-            tools:ignore="ExtraText,LockedOrientationActivity" />
     </application>
 
 </manifest>
